examples/bad/06-function_argument_type2.latf
int g(int ref x) {
    return x + 1;
}

int main() {
    g(1); // error
    return 0;
}